name:         GLFW-b
version:      1.4.3
category:     Graphics

author:       Brian Lewis <brian@lorf.org>
maintainer:   Brian Lewis <brian@lorf.org>

license:      BSD3
license-file: LICENSE

synopsis:     Bindings to GLFW OpenGL library
description:
  Bindings to GLFW (<http://www.glfw.org/>), an open source, multi-platform
  library for creating windows with OpenGL contexts and managing input and
  events.
  .
  GLFW-b depends on bindings-GLFW
  (<http://hackage.haskell.org/package/bindings-GLFW>), which, as of the time
  of this writing, binds to GLFW 3.0.3, released 2013-09-24
  (<http://www.glfw.org/Version-3.0.3-released.html>
  <http://www.glfw.org/changelog.html>).
  .
  If you've used GLFW before, you were probably using 2.7.x. There are some
  significant differences in 3.0.x. Please see the transition guide
  (<http://www.glfw.org/docs/3.0/moving.html>).

cabal-version: >= 1.10
build-type:    Simple

--------------------------------------------------------------------------------

extra-source-files:
  README.md
  TODO

--------------------------------------------------------------------------------

library
  default-language: Haskell2010

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  exposed-modules:
    Graphics.UI.GLFW

  other-modules:
    Graphics.UI.GLFW.C
    Graphics.UI.GLFW.Types

  build-depends:
    base           < 5,
    bindings-GLFW == 3.0.*

--------------------------------------------------------------------------------

test-suite main
  default-language: Haskell2010

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  type: exitcode-stdio-1.0

  main-is: Test.hs
  build-depends:
    GLFW-b,
    HUnit                == 1.2.*,
    base                  < 5,
    bindings-GLFW        == 3.0.*,
    test-framework       == 0.8.*,
    test-framework-hunit == 0.3.*

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/GLFW-b.git
