name:         GLFW-b
version:      1.4.8.1
category:     Graphics

author:       Brian Lewis <brian@lorf.org>
maintainer:   Brian Lewis <brian@lorf.org>, Schell Scivally <schell.scivally@synapsegroup.com>

license:      BSD3
license-file: LICENSE

synopsis:     Bindings to GLFW OpenGL library
description:
  Bindings to GLFW (<http://www.glfw.org/>), an open source, multi-platform
  library for creating windows with OpenGL contexts and managing input and
  events.
  .
  GLFW-b depends on bindings-GLFW
  (<http://hackage.haskell.org/package/bindings-GLFW>), which, as of the time
  of this writing, binds to GLFW 3.1, released 2015-01-18
  (<http://www.glfw.org/Version-3.1-released.html>
  <http://www.glfw.org/changelog.html>).
  .
  If you've used GLFW < 3 before, you should read the transition guide
  (<http://www.glfw.org/docs/3.0/moving.html>).

cabal-version: >= 1.10
build-type:    Simple

--------------------------------------------------------------------------------

extra-source-files:
  README.md
  TODO

--------------------------------------------------------------------------------

library
  default-language: Haskell2010

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  exposed-modules:
    Graphics.UI.GLFW

  other-modules:
    Graphics.UI.GLFW.C
    Graphics.UI.GLFW.Types

  build-depends:
    base           < 5,
    bindings-GLFW >= 3.1.2.0

--------------------------------------------------------------------------------

test-suite main
  default-language: Haskell2010

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  type: exitcode-stdio-1.0

  main-is: Test.hs
  build-depends:
    GLFW-b,
    HUnit                == 1.3.*,
    base                  < 5,
    bindings-GLFW        >= 3.1.2.0,
    test-framework       == 0.8.*,
    test-framework-hunit == 0.3.*

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/GLFW-b.git
